--- a/src/main/webapp/resources/css/generation/style.css
+++ b/src/main/webapp/resources/css/generation/style.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -7863,14 +7864,14 @@ h1, h2, h3, h4, h5,
   .table th {
     font-weight: 500; }
   .table .thead-primary {
-    background: #12e6ca;
-    background: -moz-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-    background: -webkit-gradient(left bottom, right top, color-stop(0%, #12e6ca), color-stop(100%, #8be55d));
-    background: -webkit-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-    background: -o-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-    background: -ms-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-    background: linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#12e6ca', endColorstr='#8be55d', GradientType=1 ); }
+    background: #56c8fb;
+    background: -moz-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+    background: -webkit-gradient(left bottom, right top, color-stop(0%, #56c8fb), color-stop(100%, #627bed));
+    background: -webkit-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+    background: -o-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+    background: -ms-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+    background: linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#56c8fb', endColorstr='#627bed', GradientType=1 ); }
     .table .thead-primary tr th {
       padding: 30px 10px;
       color: #fff !important;
@@ -8901,14 +8902,14 @@ textarea.form-control {
       border-radius: 50%;
       border: 1px solid #d4dbfa; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #12e6ca;
-      background: -moz-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-      background: -webkit-gradient(left bottom, right top, color-stop(0%, #12e6ca), color-stop(100%, #8be55d));
-      background: -webkit-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-      background: -o-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-      background: -ms-linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-      background: linear-gradient(45deg, #12e6ca 0%, #8be55d 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#12e6ca', endColorstr='#8be55d', GradientType=1 );
+      background: #56c8fb;
+      background: -moz-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+      background: -webkit-gradient(left bottom, right top, color-stop(0%, #56c8fb), color-stop(100%, #627bed));
+      background: -webkit-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+      background: -o-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+      background: -ms-linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+      background: linear-gradient(45deg, #56c8fb 0%, #627bed 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#56c8fb', endColorstr='#627bed', GradientType=1 );
       color: #fff;
       border: 1px solid transparent; }
 
