인덱스 구현

--- a/src/main/webapp/WEB-INF/views/generation/domain.html
+++ b/src/main/webapp/WEB-INF/views/generation/domain.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>WebHost - Free Bootstrap 4 Template by Colorlib</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,,500,600,700" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-
-    <link rel="stylesheet" href="css/aos.css">
-
-    <link rel="stylesheet" href="css/ionicons.min.css">
-
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
-
-    
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+	<head>
+		<title>WebHost - Free Bootstrap 4 Template by Colorlib</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<style>
+		  #c {
+			width: 100%;
+			height: 100%;
+			display: block;
+			background: url(../../../resources/abooimg/인덱스_건물.png) no-repeat center center;
+			background-size: contain;
+		}
+		</style>
+	
+		<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,,500,600,700" rel="stylesheet">
+	
+		<link rel="stylesheet" href="../../../resources/css/generation/open-iconic-bootstrap.min.css">
+		<link rel="stylesheet" href="../../../resources/css/generation/animate.css">
+		
+		<link rel="stylesheet" href="../../../resources/css/generation/owl.carousel.min.css">
+		<link rel="stylesheet" href="../../../resources/css/generation/owl.theme.default.min.css">
+		<link rel="stylesheet" href="../../../resources/css/generation/magnific-popup.css">
+	
+		<link rel="stylesheet" href="../../../resources/css/generation/aos.css">
+	
+		<link rel="stylesheet" href="../../../resources/css/generation/ionicons.min.css">
+	
+		<link rel="stylesheet" href="../../../resources/css/generation/bootstrap-datepicker.css">
+		<link rel="stylesheet" href="../../../resources/css/generation/jquery.timepicker.css">
+	
+		
+		<link rel="stylesheet" href="../../../resources/css/generation/flaticon.css">
+		<link rel="stylesheet" href="../../../resources/css/generation/icomoon.css">
+		<link rel="stylesheet" href="../../../resources/css/generation/style.css">
+		<script src="https://threejs.org/build/three.min.js"></script>
+	   
+	  </head>
   <body>
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
