--- a/src/main/webapp/WEB-INF/views/generation/index copy.html
+++ b/src/main/webapp/WEB-INF/views/generation/index copy.html
@@ -4,16 +4,7 @@
     <title>WebHost - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <style>
-      #c {
-        width: 100%;
-        height: 100%;
-        display: block;
-        background: url(../../../resources/abooimg/인덱스_건물.png) no-repeat center center;
-        background-size: 50%;
-    }
-    </style>
-
+    
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,,500,600,700" rel="stylesheet">
 
     <link rel="stylesheet" href="../../../resources/css/generation/open-iconic-bootstrap.min.css">
@@ -34,8 +25,6 @@
     <link rel="stylesheet" href="../../../resources/css/generation/flaticon.css">
     <link rel="stylesheet" href="../../../resources/css/generation/icomoon.css">
     <link rel="stylesheet" href="../../../resources/css/generation/style.css">
-    <script src="https://threejs.org/build/three.min.js"></script>
-   
   </head>
   <body>
     
@@ -60,10 +49,44 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
-    <div style="background: linear-gradient(45deg, #fb83b5 0%, #9a51ff 100%);">
-      <canvas id="c" class="home-slider owl-carousel" style="height: 750px;"></canvas>
+
+    <section class="home-slider owl-carousel">
+      <div class="slider-item" style="background-image: url(../../../resources/images/bg_1.jpg);">
+        <div class="overlay"></div>
+        <div class="container-fluid">
+          <div class="row slider-text align-items-center" data-scrollax-parent="true">
+
+            <div class="col-md-5 wrap col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Everything you get what you need to Host your website</h1>
+              <p class="mb-4 mb-md-5 sub-p" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Up to 90% Discount with Free Domain Name Registration</p>
+              <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Get started</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Read more</a></p>
+            </div>
+            <div class="col-md-7 ftco-animate">
+            	<img src="../../../resources/images/dashboard_full_1.png" class="img-fluid" alt="">
+            </div>
+
+          </div>
+        </div>
       </div>
-  
+
+      <div class="slider-item" style="background-image: url(images/bg_2.jpg);">
+        <div class="overlay"></div>
+        <div class="container-fluid">
+          <div class="row slider-text align-items-center" data-scrollax-parent="true">
+
+            <div class="col-md-5 wrap col-sm-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+              <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">The Web Hosting Platform Made for You</h1>
+              <p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+              <p><a href="#" class="btn btn-primary p-3 px-xl-5 py-xl-3">Get started</a> <a href="#" class="btn btn-primary btn-primary-2 p-3 px-xl-5 py-xl-3">Read more</a></p>
+            </div>
+            <div class="col-md-7 ftco-animate">
+            	<img src="../../../resources/images/dashboard_full_3.png" class="img-fluid" alt="">
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
     
     <section class="ftco-domain">
     	<div class="container">
@@ -733,93 +756,5 @@
   <script src="../../../resources/js/generation/google-map.js"></script>
   <script src="../../../resources/js/generation/main.js"></script>
     
-  <script>
-
-    function main() {
-      const canvas = document.querySelector('#c');
-      const renderer = new THREE.WebGLRenderer({
-        canvas,
-        alpha: true,
-      });
-
-      const fov = 75;
-      const aspect = 2;  // the canvas default
-      const near = 0.1;
-      const far = 5;
-      const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
-      camera.position.z = 2;
-
-      const scene = new THREE.Scene();
-
-      {
-        const color = 0xFFFFFF;
-        const intensity = 1;
-        const light = new THREE.DirectionalLight(color, intensity);
-        light.position.set(-1, 2, 4);
-        scene.add(light);
-      }
-
-      const boxWidth = 0.1;
-      const boxHeight = 0.1;
-      const boxDepth = 1;
-      const geometry = new THREE.PlaneGeometry(boxWidth, boxHeight, boxDepth);
-     
-       // 자동차들 
-      function makeInstance(geometry, color, x) {
-        const textureLoader = new THREE.TextureLoader();
-
-        const material = new THREE.MeshPhongMaterial({ map : textureLoader.load(color) });
-
-        const cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
-
-        cube.position.x = x;
-
-        return cube;
-      }
-      const cubes = [
-        makeInstance(geometry, '../../../resources/abooimg/자동차_빨강.png', 0.5),
-        makeInstance(geometry, '../../../resources/abooimg/자동차_노랑.png', 0.1),
-        makeInstance(geometry, '../../../resources/abooimg/자동차_파랑.png', 1.2),
-      ];
-
-      function resizeRendererToDisplaySize(renderer) {
-        const canvas = renderer.domElement;
-        const width = canvas.clientWidth;
-        const height = canvas.clientHeight;
-        const needResize = canvas.width !== width || canvas.height !== height;
-        if (needResize) {
-          renderer.setSize(width, height, false);
-        }
-        return needResize;
-      }
-
-      function render(time) {
-        time *= 0.001;
-
-        if (resizeRendererToDisplaySize(renderer)) {
-          const canvas = renderer.domElement;
-          camera.aspect = canvas.clientWidth / canvas.clientHeight;
-          camera.updateProjectionMatrix();
-        }
-
-        // 얘가 움직이는 애..
-        // cubes.forEach((cube, ndx) => {
-        //   const speed = 1 + ndx * .1;
-        //   const rot = time * speed;
-        //   cube.rotation.x = rot;
-        //   cube.rotation.y = rot;
-        // });
-
-        renderer.render(scene, camera);
-
-        requestAnimationFrame(render);
-      }
-
-      requestAnimationFrame(render);
-    }
-
-    main();
-  </script>
   </body>
 </html>
